<resources>
    <string name="app_name">Film Indonesia</string>
    <string name="films_title">Judul</string>
    <string name="films_description">Deskripsi</string>
    <string name="about_page">About</string>
    <string name="btn_share">Share</string>
    <string name="profile_name">Kukuh Setiadi</string>
    <string name="email">kukuhsetiadi2312@gmail.com</string>
    <string name="director">Sutradara</string>
    <string name="year">Tahun rilis</string>
    <string name="views">Jumlah penonton</string>

    <string-array name="data_title">
        <item>KKN di Desa Penari</item>
        <item>Agak Laen</item>
        <item>Warkop DKI Reborn: Jangkrik Boss! Part 1</item>
        <item>Pengabdi Setan 2: Communion</item>
        <item>Dilan 1990</item>
        <item>Miracle in Cell No. 7</item>
        <item>Vine: Sebelum 7 Hari</item>
        <item>Dilan 1991</item>
        <item>Kang Mak from Pee Mak</item>
        <item>Sewu Dino</item>
        <item>Ipar Adalah Maut</item>
        <item>Laskar Pelangi</item>
        <item>Habibie &amp; Ainun</item>
        <item>Pengabdi Setan</item>
        <item>Warkop DKI Reborn: Jangkrik Boss! Part 2</item>
    </string-array>

    <string-array name="data_description">
        <item>KKN di Desa Penari adalah film hantu Indonesia tahun 2022 yang disutradarai oleh Awi Suryadi berdasarkan cerita viral berjudul sama karya SimpleMan. Film produksi MD Pictures serta Pichouse Films ini dibintangi oleh Tissa Biani, Adinda Thomas, dan Achmad Megantara. KKN di Desa Penari tayang perdana di bioskop Indonesia pada 30 April 2022. Film ini sempat dijadwalkan akan tayang pada 19 Maret 2020 dan 24 Februari 2022. Namun, keduanya dibatalkan karena pandemi Covid-19.</item>
        <item>Agak Laen adalah film komedi Indonesia tahun 2024 yang disutradarai dan ditulis oleh Muhadkly Acho. Film produksi Imajinari serta Jagartha ini dibintangi oleh Bene Dion, Oki Rengga, dan Indra Jegel. Agak Laen tayang perdana di bioskop Indonesia pada 1 Februari 2024.</item>
        <item>Warkop DKI Reborn: Jangkrik Boss! Part 1 adalah sebuah film komedi Indonesia 2016 yang disutradarai oleh Anggy Umbara dan diproduksi oleh Falcon Pictures. Film tersebut merupakan adaptasi dari film-film Warkop DKI. Film ini dirilis pada tanggal 8 September 2016 di bioskop seluruh Indonesia. Hingga akhir penayangannya, film tersebut telah disaksikan oleh 6.858.616 penonton. Film ini menyalip penayangan film Laskar Pelangi sebagai film Indonesia terlaris sepanjang masa selama hampir enam tahun sebelum disusul oleh penayangan film KKN di Desa Penari pada tahun 2022.</item>
        <item>Pengabdi Setan 2: Communion (bahasa Inggris: Satan\'s Slaves 2: Communion) adalah sebuah film hantu adikodrati Indonesia tahun 2022 yang disutradarai dan ditulis oleh Joko Anwar sebagai sekuel dari film tahun 2017, Pengabdi Setan. Film yang ditayangkan di bioskop pada 4 Agustus 2022 ini masih dibintangi oleh para pemeran dari film pertamanya, yakni Tara Basro, Endy Arfian, Nasar Anuz, dan Bront Palarae.</item>
        <item>Dilan 1990 adalah film drama romantis Indonesia tahun 2018 yang disutradarai oleh Fajar Bustomi dan Pidi Baiq. Film ini diangkat dari novel Dilan: Dia adalah Dilanku Tahun 1990 karya Pidi Baiq dan dibintangi oleh Iqbaal Ramadhan dan Vanesha Prescilla. Para pemain pendukungnya antara lain Farhan, Ira Wibowo, Tike Priatnakusumah, dan anggota grup idola JKT48, Adhisty Zara. Ridwan Kamil, yang saat rilis film menjabat sebagai Wali Kota Bandung, juga ikut bermain di film ini. Kakak Vanesha, Sissy Priscillia, menjadi narator film sekaligus suara dari Milea dewasa.</item>
        <item>Miracle in Cell No. 7 adalah film drama keluarga Indonesia tahun 2022 yang disutradarai oleh Hanung Bramantyo berdasarkan film Korea Selatan tahun 2013 berjudul sama karya Lee Hwan-kyung. Film produksi Falcon Pictures ini dibintangi oleh Vino G. Bastian, Graciella Abigail, dan Indro Warkop. Miracle in Cell No. 7 ditayangkan secara perdana di bioskop Indonesia pada 8 September 2022.</item>
        <item>Vina: Sebelum 7 Hari adalah sebuah film hantu thriller Indonesia tahun 2024 yang disutradarai oleh Anggy Umbara berdasarkan kisah nyata pembunuhan Vina dan Eky. Film produksi Dee Company Film ini dibintangi oleh Nayla D. Purnama, Lydia Kandou, dan Gisellma Firmansyah. Vina: Sebelum 7 Hari tayang perdana di bioskop Indonesia pada 8 Mei 2024.</item>
        <item>Dilan 1991 adalah film drama romantis Indonesia tahun 2019 yang disutradarai oleh Fajar Bustomi dan Pidi Baiq. Film ini adalah sekuel dari Dilan 1990 yang tayang Januari 2018. Film tersebut pertama tayang pada 24 Februari 2019 dalam "Hari Dilan" di Bandung, sebelum resmi tayang di seluruh Indonesia empat hari kemudian. Syutingnya digelar di Bandung pada November 2018.</item>
        <item>Kang Mak from Pee Mak adalah sebuah film horor komedi Indonesia tahun 2024 yang disutradarai oleh Herwin Novianto. Film tersebut menampilkan Vino G. Bastian, Marsha Timothy, Indro Warkop, Tora Sudiro, Indra Jegel, dan Rigen Rakelna. Film yang dirilis pada 15 Agustus 2024 ini merupakan hasil adaptasi dari film hit bergenre serupa asal Thailand berjudul Pee Mak.</item>
        <item>Sewu Dino (dari bahasa Jawa: sewu dina / ꦱꦺꦮꦸꦢꦶꦤ, bahasa Indonesia: Seribu Hari) adalah sebuah film hantu Indonesia tahun 2023 yang disutradarai oleh Kimo Stamboel berdasarkan cerita viral berjudul sama karya SimpleMan. Film yang ditayangkan di bioskop Indonesia pada 19 April 2023 ini dibintangi oleh Mikha Tambayong, Gisellma Firmansyah, Rio Dewanto, Marthino Lio, Givina Lukita Dewi, Agla Artalidia, Pritt Timothy, dan Karina Suwandi</item>
        <item>Ipar adalah Maut adalah film drama Indonesia tahun 2024 yang disutradarai oleh Hanung Bramantyo berdasarkan cerita viral berjudul sama karya Elizasifaa. Film produksi MD Pictures serta Dapur Film ini dibintangi oleh Michelle Ziudith, Deva Mahenra dan Davina Karamoy. Ipar adalah Maut tayang perdana di bioskop pada tanggal 13 Juni 2024.</item>
        <item>Laskar Pelangi adalah sebuah film drama Indonesia tahun 2008 yang disutradarai oleh Riri Riza dari skenario yang ditulis oleh Salman Aristo bersama Riri dan Mira Lesmana berdasarkan novel berjudul sama karya Andrea Hirata. Film ini diproduksi oleh Miles Films bersama Mizan Productions dan SinemArt.</item>
        <item>Habibie &amp; Ainun adalah film drama biografi Indonesia yang dirilis pada tanggal 20 Desember 2012. Film ini dibintangi oleh Reza Rahardian dan Bunga Citra Lestari. Pada peluncurannya, film ini disaksikan oleh Presiden Republik Indonesia ke-6, Susilo Bambang Yudhoyono, didampingi oleh Gubernur Daerah Khusus Ibukota Jakarta ke-16, Joko Widodo, dan oleh tokoh utama film ini sendiri, Presiden Republik Indonesia ke-3, Bacharuddin Jusuf Habibie. Film ini diangkat dari memoar berjudul sama, yang ditulis Habibie mengenai kisah hidupnya bersama mendiang istrinya, Hasri Ainun Habibie.</item>
        <item>Pengabdi Setan (bahasa Inggris: Satan\'s Slaves) merupakan film hantu adikodrati Indonesia tahun 2017 yang ditulis dan disutradarai oleh Joko Anwar. Dirilis pada 28 September 2017, film ini adalah penghidupan ulang (reboot) dari film berjudul sama pada tahun 1980 silam.</item>
        <item>Warkop DKI Reborn: Jangkrik Boss! Part 2 adalah sebuah film komedi Indonesia 2017 yang disutradarai oleh Anggy Umbara. Film tersebut merupakan adaptasi dari film-film Warkop DKI dan sequel dari film Warkop DKI Reborn: Jangkrik Boss! Part 1 yang dirilis tahun 2016.</item>
    </string-array>

    <string-array name="data_photo">
        <item>https://upload.wikimedia.org/wikipedia/id/b/b7/KKN_di_Desa_Penari.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/0/01/Poster_Agak_Laen_%282024%29.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/5/55/WDKI_reborn.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/2/26/Pengabdi_Setan_2.jpeg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/1/19/Dilan_1990_%28poster%29.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/8/8a/Miracle_in_Cell_No_7_Indonesian_remake_film_2022_Official_poster.jpeg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/c/cc/Poster_Film_Vina.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/c/cc/Dilan_1991_Film_Poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/c/ce/Poster_Kang_Mak.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/0/0c/Sewu_Dino.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/7/79/Poster_IAM.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/1/17/Laskar_Pelangi_film.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/7/74/Habibie_Ainun_Poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/e/e1/Pengabdi_Setan_poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/7/7d/WDKI_reborn_2.jpg</item>
    </string-array>

    <string-array name="data_genre">
        <item>Horror</item>
        <item>Comedy</item>
        <item>Comedy</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Drama</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Horror</item>
        <item>Horror</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Romance</item>
        <item>Horror</item>
        <item>Comedy</item>
    </string-array>

    <string-array name="data_director">
        <item>Awi Suryadi</item>
        <item>Muhadkly Acho</item>
        <item>Anggy Umbara</item>
        <item>Joko Anwar</item>
        <item>Fajar Bustomy, Pidi Baiq</item>
        <item>Hanung Bramantyo</item>
        <item>Anggy Umbara</item>
        <item>Fajar Bustomy, Pidi Baiq</item>
        <item>Herwin Novianto</item>
        <item>Kimo Stamboel</item>
        <item>Hanung Bramantyo</item>
        <item>Riri Riza</item>
        <item>Faozan Rizal</item>
        <item>Joko Anwar</item>
        <item>Anggy Umbara</item>
    </string-array>

    <string-array name="data_year">
        <item>2022</item>
        <item>2024</item>
        <item>2016</item>
        <item>2022</item>
        <item>2018</item>
        <item>2022</item>
        <item>2024</item>
        <item>2019</item>
        <item>2024</item>
        <item>2023</item>
        <item>2024</item>
        <item>2008</item>
        <item>2012</item>
        <item>2017</item>
        <item>2017</item>
    </string-array>

    <integer-array name="data_views">
        <item>10061033</item>
        <item>9125188</item>
        <item>6858616</item>
        <item>6390970</item>
        <item>6315664</item>
        <item>5861067</item>
        <item>5815492</item>
        <item>5253441</item>
        <item>4835820</item>
        <item>4891469</item>
        <item>4775875</item>
        <item>4719453</item>
        <item>4601249</item>
        <item>4206103</item>
        <item>4083190</item>
    </integer-array>

</resources>